[GIL-13] added parameter for multipage uploads