@@ -24,9 +24,10 @@ import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 
 import edu.asu.giles.aspects.access.GitHubAccessCheck;
+import edu.asu.giles.core.DocumentAccess;
+import edu.asu.giles.core.DocumentType;
 import edu.asu.giles.core.IDocument;
 import edu.asu.giles.core.IFile;
-import edu.asu.giles.core.impl.DocumentAccess;
 import edu.asu.giles.files.IFilesManager;
 import edu.asu.giles.files.impl.StorageStatus;
 import edu.asu.giles.users.User;
@@ -34,17 +35,20 @@ import edu.asu.giles.util.FileUploadHelper;
 
 @Controller
 public class UploadImagesController {
-    
+
     @Autowired
     private FileUploadHelper uploadHelper;
-    
+
     @Autowired
     private IFilesManager filesManager;
 
     @GitHubAccessCheck
     @RequestMapping(value = "/rest/files/upload", method = RequestMethod.POST, consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
     public ResponseEntity<String> uploadImages(
-            @RequestParam String accessToken, @RequestParam(value = "access", defaultValue = "PRIVATE") String access, @RequestParam("files") MultipartFile[] files, User user) {
+            @RequestParam String accessToken,
+            @RequestParam(value = "access", defaultValue = "PRIVATE") String access,
+            @RequestParam("files") MultipartFile[] files,
+            @RequestParam(value = "document_type", defaultValue = "SINGLE_PAGE") String docType, User user) {
 
         DocumentAccess docAccess = DocumentAccess.valueOf(access);
         if (docAccess == null) {
@@ -52,19 +56,26 @@ public class UploadImagesController {
                     + " does not exist.", HttpStatus.BAD_REQUEST);
         }
         
-        List<StorageStatus> statuses = uploadHelper.processUpload(docAccess, files, user.getUsername());
-        
+        DocumentType documentType = DocumentType.valueOf(docType);
+        if (documentType == null) {
+            return new ResponseEntity<String>("Document type: " + docType
+                    + " does not exist.", HttpStatus.BAD_REQUEST);
+        }
+
+        List<StorageStatus> statuses = uploadHelper.processUpload(docAccess, documentType,
+                files, user.getUsername());
+
         Set<String> docIds = new HashSet<String>();
         statuses.forEach(status -> docIds.add(status.getFile().getDocumentId()));
-        
+
         ObjectMapper mapper = new ObjectMapper();
         mapper.enable(SerializationFeature.INDENT_OUTPUT);
         ArrayNode root = mapper.createArrayNode();
-        
+
         for (String docId : docIds) {
-            
+
             IDocument doc = filesManager.getDocument(docId);
-            
+
             ObjectNode docNode = mapper.createObjectNode();
             root.add(docNode);
 
@@ -74,10 +85,12 @@ public class UploadImagesController {
             docNode.put("access", doc.getAccess().toString());
 
             ArrayNode paths = docNode.putArray("files");
-            
-            Stream<StorageStatus> docFileStatues = statuses.stream().filter(status -> status.getFile().getDocumentId().equals(docId));
-            
-            for (StorageStatus status : docFileStatues.collect(Collectors.toList())) {
+
+            Stream<StorageStatus> docFileStatues = statuses.stream().filter(
+                    status -> status.getFile().getDocumentId().equals(docId));
+
+            for (StorageStatus status : docFileStatues.collect(Collectors
+                    .toList())) {
                 ObjectNode fileNode = mapper.createObjectNode();
                 IFile file = status.getFile();
                 fileNode.put("filename", file.getFilename());
@@ -88,7 +101,7 @@ public class UploadImagesController {
                 paths.add(fileNode);
             }
         }
-        
+
         StringWriter sw = new StringWriter();
         try {
             mapper.writeValue(sw, root);
@@ -97,7 +110,6 @@ public class UploadImagesController {
                     "{\"error\": \"Could not write json result.\" }",
                     HttpStatus.INTERNAL_SERVER_ERROR);
         }
-
 
         return new ResponseEntity<String>(sw.toString(), HttpStatus.OK);
     }
